samples/_failures_safe/1761651767_782b85_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b4f54321.c: In function ‘multiply_matrices’:
./samples/SAFE/__tmp_b4f54321.c:116:17: error: expected ‘,’ or ‘;’ at end of input
  116 |                 long long sum = (long long)result->data[i][j] + product
      |                 ^~~~
./samples/SAFE/__tmp_b4f54321.c:116:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b4f54321.c:116:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b4f54321.c:116:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b4f54321.c:116:17: error: expected declaration or statement at end of input
